--- a/my-app1/src/App.css
+++ b/my-app1/src/App.css
@@ -35,22 +35,38 @@ body{
     align-items: center;
     width: 375px;
 }
-.todo-content span p{
+.todo-content p{
     font-weight: 400;
     font-size: 18px;
     margin-top: 8px;
     text-align: justify ;
+    padding-right: 10%;
 }
-.todo-content span{
-    margin-left: 10px;
-
+.todo-content .name{
+    padding-right: 10px;
+    margin-left: 2%;
+    margin-top: 8px;
+    position: relative;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    width: 88.3%;
+    width: 85%;
+    
+}
+.todo-content .reminder {
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    position: absolute;
+    right: 10px;
+    top: 40%;
+    
 }
 .todo-content form input{
     height:22px;
      width:22px;
      cursor: pointer;
+}
+.todo-content form{
+    width: 10%;
 }
 #typeText{
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -85,3 +101,27 @@ body{
     margin-top: 10px;
     font-size: 18px;
 }
+.date{
+    font-size: 10px;
+    color: rgb(162, 157, 157);
+}
+#typeText .date-time{
+    width: 290px;
+    margin: -8px 10px 10px 10px ;
+    display: flex;
+    justify-content: space-between;
+
+}
+#typeText p{
+    margin-left: 10px;
+    font-size: 12px;
+    font-weight: 600;
+}
+.date-time .date{
+    width: 55%;
+
+}
+.date-time .time{
+    width: 40%;
+}
+
